maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:57: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
      if (getIndication() != NO_INDICATION) {
                       ^